<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_meditation"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_meditation" />

    <item
        android:id="@+id/navigation_therapist"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_therapist" />

    <item
        android:id="@+id/navigation_mood"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_mood_tracker" />

    <item
        android:id="@+id/navigation_health"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_mental_health" />

</menu>